# my-mcp-server

./: .fastmcp.json  .gitignore  README.md  pyproject.toml  requirements.txt
my_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: demo_server.py  mcp-local.json  mcp.json  setup_and_run.py  test_client.py
src/components/: __init__.py  prompts.py  resources.py  tools.py
