[project]
name = "my-mcp-server"
version = "1.0.0"
description = "A comprehensive MCP server demonstrating tools, resources, and prompts"
authors = [
    { name = "jasonshen190" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools]
packages = ["src", "src.components"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "src"
]

[project.scripts]
my-mcp-server = "src.demo_server:main"